@@ -4,6 +4,7 @@ NEW FUNCTIONS:
   * osc_dB(): draws an oscillogram (waveform) on a log-tranformed, dB scale. Analogous to the "Waveform (dB)" view in Audacity
 
 MINOR:
+  * soundgen(): vectorized parameters (rolloff, jitter, shimmer, subharmonics, etc.) can be specified on a natural time scale (todo: in the same format as all anchors)
   * spectrogram(): added dynamic range, support for plotting the oscillogram on a dB scale, and adjustable size of spectrogram/oscillogram panels
   * soundgen_app(): fixed a bug introduced in 1.2.1 that crashed the app when changing sylLen
 
